implemented restyle and added favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./rsc/css/style.css" />
     <script defer src="./rsc/js/script.js"></script>
-    <title>Asynchronous JavaScript</title>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./rsc/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./rsc/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./rsc/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./rsc/favicon/site.webmanifest" />
+    <title>Globe Fetcher</title>
   </head>
   <body>
     <main class="container">
